--- a/egs/voicehome/frontend/index.html
+++ b/egs/voicehome/frontend/index.html
@@ -10,7 +10,7 @@
 
     <!-- Scripts -->
     <script type="text/javascript">
-        let global_variable
+        let ws
     </script>
     <script src="script.js" type="text/javascript"></script>
 </head>
