modules styled on the frontend

--- a/egs/voicehome/frontend/index.html
+++ b/egs/voicehome/frontend/index.html
@@ -16,5 +16,6 @@
 </head>
 <body onload="onBodyLoad()">
     <div id="header">The VOICEHOME project. Coming soon.</div>
+    <div id="modules"></div>
 </body>
 </html>
