--- a/egs/voicehome/frontend/index.html
+++ b/egs/voicehome/frontend/index.html
@@ -1,21 +1,298 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>
-        Voice-enabled smart home modules
-    </title>
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Voice-enabled smart home modules</title>
 
-    <!-- Styles -->
-    <link rel="stylesheet" href="style.css" type="text/css" >
+		<!-- Styles -->
+		<link rel="stylesheet" href="style.css" type="text/css" />
 
-    <!-- Scripts -->
-    <script type="text/javascript">
-        let ws
-    </script>
-    <script src="script.js" type="text/javascript"></script>
-</head>
-<body onload="onBodyLoad()">
-    <div id="header">The VOICEHOME project. Coming soon.</div>
-    <div id="modules"></div>
-</body>
+		<!-- Scripts -->
+		<script type="text/javascript">
+			let ws;
+		</script>
+		<script src="script.js" type="text/javascript"></script>
+
+		<!-- Chart.js -->
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"
+			integrity="sha512-d9xgZrVZpmmQlfonhQUvTR7lMPtO7NkZMkA0ABN3PHCbKA5nqylQ/yWlFAyY6hYgdF1Qh6nYiuADWwKB4C2WSw=="
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.bundle.js"
+			integrity="sha512-zO8oeHCxetPn1Hd9PdDleg5Tw1bAaP0YmNvPY8CwcRyUk7d7/+nyElmFrB6f7vg4f7Fv4sui1mcep8RIEShczg=="
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.bundle.min.js"
+			integrity="sha512-SuxO9djzjML6b9w9/I07IWnLnQhgyYVSpHZx0JV97kGBfTIsUYlWflyuW4ypnvhBrslz1yJ3R+S14fdCWmSmSA=="
+			crossorigin="anonymous"
+		></script>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.css"
+			integrity="sha512-C7hOmCgGzihKXzyPU/z4nv97W0d9bv4ALuuEbSf6hm93myico9qa0hv4dODThvCsqQUmKmLcJmlpRmCaApr83g=="
+			crossorigin="anonymous"
+		/>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"
+			integrity="sha512-hZf9Qhp3rlDJBvAKvmiG+goaaKRZA6LKUO35oK6EsM0/kjPK32Yw7URqrq3Q+Nvbbt8Usss+IekL7CRn83dYmw=="
+			crossorigin="anonymous"
+		></script>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.css"
+			integrity="sha512-/zs32ZEJh+/EO2N1b0PEdoA10JkdC3zJ8L5FTiQu82LR9S/rOQNfQN7U59U9BC12swNeRAz3HSzIL2vpp4fv3w=="
+			crossorigin="anonymous"
+		/>
+
+		<!-- AwesomeFont -->
+		<link
+			rel="stylesheet"
+			href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+			integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+			crossorigin="anonymous"
+		/>
+
+		<!-- Bootstrap -->
+		<!-- CSS -->
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+			integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+			crossorigin="anonymous"
+		/>
+
+		<!-- jQuery and JS bundle w/ Popper.js -->
+		<script
+			src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+			integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+			crossorigin="anonymous"
+		></script>
+	</head>
+	<body onload="onBodyLoad()">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<a class="navbar-brand" href="#">Navbar</a>
+			<button
+				class="navbar-toggler"
+				type="button"
+				data-toggle="collapse"
+				data-target="#navbarNavDropdown"
+				aria-controls="navbarNavDropdown"
+				aria-expanded="false"
+				aria-label="Toggle navigation"
+			>
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNavDropdown">
+				<ul class="navbar-nav">
+					<li class="nav-item active">
+						<a class="nav-link" href="#"
+							>Home<span class="sr-only">(current)</span>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Features</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Pricing</a>
+					</li>
+					<li class="nav-item dropdown">
+						<a
+							class="nav-link dropdown-toggle"
+							href="#"
+							id="navbarDropdownMenuLink"
+							data-toggle="dropdown"
+							aria-haspopup="true"
+							aria-expanded="false"
+						>
+							Dropdown link
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+							<a class="dropdown-item" href="#">Action</a>
+							<a class="dropdown-item" href="#">Another action</a>
+							<a class="dropdown-item" href="#">Something else here</a>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</nav>
+
+		<h2>Horizontal Scrollable Menu</h2>
+
+		<canvas id="myChart" width="400" height="400"></canvas>
+		<script>
+			var ctx = document.getElementById("myChart").getContext("2d");
+			var myChart = new Chart(ctx, {
+				type: "bar",
+				data: {
+					labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
+					datasets: [
+						{
+							label: "# of Votes",
+							data: [12, 19, 3, 5, 2, 3],
+							backgroundColor: [
+								"rgba(255, 99, 132, 0.2)",
+								"rgba(54, 162, 235, 0.2)",
+								"rgba(255, 206, 86, 0.2)",
+								"rgba(75, 192, 192, 0.2)",
+								"rgba(153, 102, 255, 0.2)",
+								"rgba(255, 159, 64, 0.2)",
+							],
+							borderColor: [
+								"rgba(255, 99, 132, 1)",
+								"rgba(54, 162, 235, 1)",
+								"rgba(255, 206, 86, 1)",
+								"rgba(75, 192, 192, 1)",
+								"rgba(153, 102, 255, 1)",
+								"rgba(255, 159, 64, 1)",
+							],
+							borderWidth: 1,
+						},
+					],
+				},
+				options: {
+					scales: {
+						yAxes: [
+							{
+								ticks: {
+									beginAtZero: true,
+								},
+							},
+						],
+					},
+				},
+			});
+		</script>
+
+		<p>Resize the browser window to see the effect.</p>
+
+		<!-- row -->
+		<div class="row">
+			<div class="col-sm-6">
+				<div class="card">
+					<div class="card-body">
+						<h5 class="card-title">Special title treatment</h5>
+						<p class="card-text">
+							With supporting text below as a natural lead-in to additional
+							content.
+						</p>
+						<a href="#" class="btn btn-primary">Go somewhere</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6">
+				<div class="card">
+					<div class="card-body">
+						<h5 class="card-title">Special title treatment</h5>
+						<p class="card-text">
+							With supporting text below as a natural lead-in to additional
+							content.
+						</p>
+						<a href="#" class="btn btn-primary">Go somewhere</a>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- columns -->
+		<div class="card-columns" id="home-analitics">
+			<div class="card">
+				<img class="card-img-top" src="..." alt="Card image cap" />
+				<div class="card-body">
+					<h5 class="card-title">Card title that wraps to a new line</h5>
+					<p class="card-text">
+						This is a longer card with supporting text below as a natural
+						lead-in to additional content. This content is a little bit longer.
+					</p>
+				</div>
+			</div>
+			<div class="card p-3">
+				<blockquote class="blockquote mb-0 card-body">
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+						posuere erat a ante.
+					</p>
+					<footer class="blockquote-footer">
+						<small class="text-muted">
+							Someone famous in <cite title="Source Title">Source Title</cite>
+						</small>
+					</footer>
+				</blockquote>
+			</div>
+			<div class="card">
+				<img class="card-img-top" src="..." alt="Card image cap" />
+				<div class="card-body">
+					<h5 class="card-title">Card title</h5>
+					<p class="card-text">
+						This card has supporting text below as a natural lead-in to
+						additional content.
+					</p>
+					<p class="card-text">
+						<small class="text-muted">Last updated 3 mins ago</small>
+					</p>
+				</div>
+			</div>
+			<div class="card bg-primary text-white text-center p-3">
+				<blockquote class="blockquote mb-0">
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+						posuere erat.
+					</p>
+					<footer class="blockquote-footer">
+						<small>
+							Someone famous in <cite title="Source Title">Source Title</cite>
+						</small>
+					</footer>
+				</blockquote>
+			</div>
+			<div class="card text-center">
+				<div class="card-body">
+					<h5 class="card-title">Card title</h5>
+					<p class="card-text">
+						This card has supporting text below as a natural lead-in to
+						additional content.
+					</p>
+					<p class="card-text">
+						<small class="text-muted">Last updated 3 mins ago</small>
+					</p>
+				</div>
+			</div>
+			<div class="card">
+				<img class="card-img" src="..." alt="Card image" />
+			</div>
+			<div class="card p-3 text-right">
+				<blockquote class="blockquote mb-0">
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+						posuere erat a ante.
+					</p>
+					<footer class="blockquote-footer">
+						<small class="text-muted">
+							Someone famous in <cite title="Source Title">Source Title</cite>
+						</small>
+					</footer>
+				</blockquote>
+			</div>
+			<div class="card">
+				<div class="card-body">
+					<h5 class="card-title">Card title</h5>
+					<p class="card-text">
+						This is a wider card with supporting text below as a natural lead-in
+						to additional content. This card has even longer content than the
+						first to show that equal height action.
+					</p>
+					<p class="card-text">
+						<small class="text-muted">Last updated 3 mins ago</small>
+					</p>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
