--- a/egs/voicehome/frontend/index.html
+++ b/egs/voicehome/frontend/index.html
@@ -15,7 +15,7 @@
 	<script src="js/script.js" type="text/javascript"></script>
 	<script src="https://unpkg.com/gauge-chart@latest/dist/bundle.js"></script>
 
-	<script src="js/time_graph.js"></script>
+	<!--<script src="js/time_graph.js"></script>-->
 	<script src="js/moment.js"></script>
 
 	<!-- Chart.js -->
