--- a/egs/voicehome/frontend/index.html
+++ b/egs/voicehome/frontend/index.html
@@ -1,21 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>
-        Voice-enabled smart home modules
-    </title>
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Voice-enabled smart home modules</title>
 
-    <!-- Styles -->
-    <link rel="stylesheet" href="style.css" type="text/css" >
+		<!-- Styles -->
+		<link rel="stylesheet" href="css/style.css" type="text/css" />
 
-    <!-- Scripts -->
-    <script type="text/javascript">
-        let ws
-    </script>
-    <script src="script.js" type="text/javascript"></script>
-</head>
-<body onload="onBodyLoad()">
-    <div id="header">The VOICEHOME project. Coming soon.</div>
-    <div id="modules"></div>
-</body>
+		<!-- Scripts -->
+		<script type="text/javascript">
+			let ws;
+		</script>
+		<script src="js/script.js" type="text/javascript"></script>
+		<script src="https://unpkg.com/gauge-chart@latest/dist/bundle.js"></script>
+
+		<!--<script src="js/time_graph.js"></script>-->
+		<script src="js/moment.js"></script>
+
+		<!-- Chart.js -->
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"
+			integrity="sha512-d9xgZrVZpmmQlfonhQUvTR7lMPtO7NkZMkA0ABN3PHCbKA5nqylQ/yWlFAyY6hYgdF1Qh6nYiuADWwKB4C2WSw=="
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.bundle.js"
+			integrity="sha512-zO8oeHCxetPn1Hd9PdDleg5Tw1bAaP0YmNvPY8CwcRyUk7d7/+nyElmFrB6f7vg4f7Fv4sui1mcep8RIEShczg=="
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.bundle.min.js"
+			integrity="sha512-SuxO9djzjML6b9w9/I07IWnLnQhgyYVSpHZx0JV97kGBfTIsUYlWflyuW4ypnvhBrslz1yJ3R+S14fdCWmSmSA=="
+			crossorigin="anonymous"
+		></script>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.css"
+			integrity="sha512-C7hOmCgGzihKXzyPU/z4nv97W0d9bv4ALuuEbSf6hm93myico9qa0hv4dODThvCsqQUmKmLcJmlpRmCaApr83g=="
+			crossorigin="anonymous"
+		/>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"
+			integrity="sha512-hZf9Qhp3rlDJBvAKvmiG+goaaKRZA6LKUO35oK6EsM0/kjPK32Yw7URqrq3Q+Nvbbt8Usss+IekL7CRn83dYmw=="
+			crossorigin="anonymous"
+		></script>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.css"
+			integrity="sha512-/zs32ZEJh+/EO2N1b0PEdoA10JkdC3zJ8L5FTiQu82LR9S/rOQNfQN7U59U9BC12swNeRAz3HSzIL2vpp4fv3w=="
+			crossorigin="anonymous"
+		/>
+
+		<!-- AwesomeFont -->
+		<link
+			rel="stylesheet"
+			href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+			integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+			crossorigin="anonymous"
+		/>
+
+		<!-- Bootstrap -->
+		<!-- CSS -->
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+			integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+			crossorigin="anonymous"
+		/>
+
+		<!-- jQuery and JS bundle w/ Popper.js -->
+		<script
+			src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+			integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+			crossorigin="anonymous"
+		></script>
+
+		<!-- Bootstrap Toggle -->
+		<link
+			href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css"
+			rel="stylesheet"
+		/>
+		<script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
+	</head>
+
+	<body onload="onBodyLoad()">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<a class="navbar-brand" href="#">IOT</a>
+			<button
+				class="navbar-toggler"
+				type="button"
+				data-toggle="collapse"
+				data-target="#navbarNavDropdown"
+				aria-controls="navbarNavDropdown"
+				aria-expanded="false"
+				aria-label="Toggle navigation"
+			>
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNavDropdown">
+				<ul class="navbar-nav">
+					<li class="nav-item active">
+						<a class="nav-link" href="#"
+							>Home<span class="sr-only">(current)</span>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Switches</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Analytics</a>
+					</li>
+					<li class="nav-item dropdown">
+						<a
+							class="nav-link dropdown-toggle"
+							href="#"
+							id="navbarDropdownMenuLink"
+							data-toggle="dropdown"
+							aria-haspopup="true"
+							aria-expanded="false"
+						>
+							Rooms
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+							<a class="dropdown-item" href="#">Bedroom</a>
+							<a class="dropdown-item" href="#">Kitchen</a>
+							<a class="dropdown-item" href="#">Living room</a>
+						</div>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Modules</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+
+		<!-- row -->
+		<div class="home-switches">
+			<div class="row">
+				<div class="col-sm-3">
+					<div class="card">
+						<div class="card-body">
+							<h5 class="card-title">Lampicka</h5>
+							<p class="card-text">
+								<input
+									type="checkbox"
+									checked
+									data-toggle="toggle"
+									data-size="sm"
+								/>
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-3">
+					<div class="card">
+						<div class="card-body">
+							<h5 class="card-title">Lampicka</h5>
+							<p class="card-text">
+								<input
+									type="checkbox"
+									checked
+									data-toggle="toggle"
+									data-size="sm"
+								/>
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="header">The VOICEHOME project. Coming soon.</div>
+		<div id="modules"></div>
+	</body>
 </html>
