--- a/egs/voicehome/frontend/index.html
+++ b/egs/voicehome/frontend/index.html
@@ -41,7 +41,7 @@
 
 		<!-- Bootstrap Toggle -->
 		<link
-			href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css"
+			href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css"
 			rel="stylesheet"
 		/>
 	</head>
@@ -195,7 +195,7 @@
 			crossorigin="anonymous"
 		></script>
 		<!-- Bootstrap Toggle -->
-		<script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
+		<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 		<!-- Scripts -->
 		<script type="text/javascript">
 			let ws;
