--- a/egs/voicehome/frontend/index.html
+++ b/egs/voicehome/frontend/index.html
@@ -176,9 +176,9 @@
 		<!-- Bootstrap Toggle -->
 		<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 		<!-- Scripts -->
-		<script type="text/javascript">
+		<!-- <script type="text/javascript">
 			let ws;
-		</script>
+		</script> -->
 		<script src="js/script.js" type="text/javascript"></script>
 	</body>
 </html>
