--- a/egs/voicehome/frontend/index.html
+++ b/egs/voicehome/frontend/index.html
@@ -135,6 +135,7 @@
 
 		<div id="header">The VOICEHOME project. Coming soon.</div>
 		<div id="modules"></div>
+		<div id="eventLog"></div>
 
 		<!--<script src="js/time_graph.js"></script>-->
 		<script src="js/moment.js"></script>
