--- a/egs/voicehome/frontend/index.html
+++ b/egs/voicehome/frontend/index.html
@@ -138,7 +138,8 @@
 			<div id="header">The VOICEHOME project. Coming soon.</div>
 			<div id="eventLog"></div>
 			<div class="row">
-				<div id="modules" class="col-md-4 col-lg-3 d-none d-md-block"></div>
+				<div id="modules" class="col-md-4 col-lg-3 d-md-block"></div>
+				<!-- <div id="modules" class="col-md-4 col-lg-3 d-none d-md-block"></div> -->
 				<div id="modules_information" class="col-md-8 col-lg-9 col-12"></div>
 			</div>
 		</div>
