try add data for graph in analytics

--- a/egs/voicehome/frontend/analytics.html
+++ b/egs/voicehome/frontend/analytics.html
@@ -120,7 +120,7 @@
 				<button id="addData">Add Data</button>
 				<button id="removeData">Remove Data</button>
 				<script>
-					request_whole_temperature_data();
+					// request_whole_temperature_data();
 					// var timeFormat = "MM/DD/YYYY HH:mm";
 					var timeFormat = "YYYY-MM-DD HH:mm:ss";
 
@@ -145,7 +145,7 @@
 										.rgbString(),
 									borderColor: window.chartColors.green,
 									fill: false,
-									data: data_temperature,
+									data: [],
 								},
 							],
 						},
