--- a/egs/voicehome/frontend/analytics.html
+++ b/egs/voicehome/frontend/analytics.html
@@ -102,7 +102,7 @@
 			</div>
 		</nav>
 
-		<script src="js/time_graph.js"></script>
+		<!-- <script src="js/time_graph.js"></script> -->
 		<script src="js/moment.js"></script>
 		<script src="https://unpkg.com/gauge-chart@latest/dist/bundle.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.js"></script>
