--- a/egs/voicehome/frontend/analytics.html
+++ b/egs/voicehome/frontend/analytics.html
@@ -162,6 +162,43 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.js"></script>
 
 		<script>
+			window.chartColors = {
+				red: "rgb(255, 99, 132)",
+				orange: "rgb(255, 159, 64)",
+				yellow: "rgb(255, 205, 86)",
+				green: "rgb(75, 192, 192)",
+				blue: "rgb(54, 162, 235)",
+				purple: "rgb(153, 102, 255)",
+				grey: "rgb(201, 203, 207)",
+			};
+
+			var MONTHS = [
+				"January",
+				"February",
+				"March",
+				"April",
+				"May",
+				"June",
+				"July",
+				"August",
+				"September",
+				"October",
+				"November",
+				"December",
+			];
+
+			var COLORS = [
+				"#4dc9f6",
+				"#f67019",
+				"#f53794",
+				"#537bc4",
+				"#acc236",
+				"#166a8f",
+				"#00a950",
+				"#58595b",
+				"#8549ba",
+			];
+
 			// var timeFormat = "MM/DD/YYYY HH:mm";
 			var timeFormat = "YYYY-MM-DD HH:mm:ss";
 
@@ -172,6 +209,8 @@
 			function newDateString(days) {
 				return moment().add(days, "d").format(timeFormat);
 			}
+
+			var color = Chart.helpers.color;
 			var config = {
 				type: "line",
 				data: {
@@ -179,10 +218,10 @@
 					datasets: [
 						{
 							label: "Dataset with point data",
-							backgroundColor: color("rgb(75, 192, 192)")
+							backgroundColor: color(window.chartColors.green)
 								.alpha(0.5)
 								.rgbString(),
-							borderColor: "rgb(75, 192, 192)",
+							borderColor: window.chartColors.green,
 							fill: false,
 							data: [],
 						},
@@ -223,6 +262,82 @@
 				var ctx = document.getElementById("canvas").getContext("2d");
 				window.myLine = new Chart(ctx, config);
 			};
+
+			document
+				.getElementById("randomizeData")
+				.addEventListener("click", function () {
+					config.data.datasets.forEach(function (dataset) {
+						dataset.data.forEach(function (dataObj, j) {
+							if (typeof dataObj === "object") {
+								dataObj.y = randomScalingFactor();
+							} else {
+								dataset.data[j] = randomScalingFactor();
+							}
+						});
+					});
+
+					window.myLine.update();
+				});
+
+			var colorNames = Object.keys(window.chartColors);
+			document
+				.getElementById("addDataset")
+				.addEventListener("click", function () {
+					var colorName =
+						colorNames[config.data.datasets.length % colorNames.length];
+					var newColor = window.chartColors[colorName];
+					var newDataset = {
+						label: "Dataset " + config.data.datasets.length,
+						borderColor: newColor,
+						backgroundColor: color(newColor).alpha(0.5).rgbString(),
+						data: [],
+					};
+
+					for (var index = 0; index < config.data.labels.length; ++index) {
+						newDataset.data.push(randomScalingFactor());
+					}
+
+					config.data.datasets.push(newDataset);
+					window.myLine.update();
+				});
+
+			document.getElementById("addData").addEventListener("click", function () {
+				if (config.data.datasets.length > 0) {
+					config.data.labels.push(newDate(config.data.labels.length));
+
+					for (var index = 0; index < config.data.datasets.length; ++index) {
+						if (typeof config.data.datasets[index].data[0] === "object") {
+							config.data.datasets[index].data.push({
+								x: newDate(config.data.datasets[index].data.length),
+								y: randomScalingFactor(),
+							});
+						} else {
+							config.data.datasets[index].data.push(randomScalingFactor());
+						}
+					}
+
+					window.myLine.update();
+				}
+			});
+
+			document
+				.getElementById("removeDataset")
+				.addEventListener("click", function () {
+					config.data.datasets.splice(0, 1);
+					window.myLine.update();
+				});
+
+			document
+				.getElementById("removeData")
+				.addEventListener("click", function () {
+					config.data.labels.splice(-1, 1); // remove the label first
+
+					config.data.datasets.forEach(function (dataset) {
+						dataset.data.pop();
+					});
+
+					window.myLine.update();
+				});
 		</script>
 	</body>
 </html>
