show data_temperature

--- a/egs/voicehome/frontend/analytics.html
+++ b/egs/voicehome/frontend/analytics.html
@@ -122,7 +122,7 @@
 		</script>
 
 		<!-- Chart.js -->
-		<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+		<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
 
 		<!-- Bootstrap -->
 		<!-- jQuery and JS bundle w/ Popper.js -->
