--- a/egs/voicehome/frontend/analytics.html
+++ b/egs/voicehome/frontend/analytics.html
@@ -89,7 +89,7 @@
 			<canvas id="myChart"></canvas>
 		</div>
 		<!-- Script for myChart -->
-		<script>
+		<!-- <script>
 			var ctx = document.getElementById("myChart").getContext("2d");
 			var chart = new Chart(ctx, {
 				// The type of chart we want to create
@@ -119,7 +119,7 @@
 				// Configuration options go here
 				options: {},
 			});
-		</script>
+		</script> -->
 
 		<!-- Chart.js -->
 		<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
