--- a/egs/voicehome/frontend/analytics.html
+++ b/egs/voicehome/frontend/analytics.html
@@ -123,6 +123,8 @@
 
 		<!-- Chart.js -->
 		<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
+		<!-- used for parsing date -->
+		<script src="js/moment.js"></script>
 
 		<!-- Bootstrap -->
 		<!-- jQuery and JS bundle w/ Popper.js -->
