--- a/egs/voicehome/frontend/analytics.html
+++ b/egs/voicehome/frontend/analytics.html
@@ -135,6 +135,7 @@
 		>
 			<canvas id="myChart"></canvas>
 		</div>
+		<div id="div_g" style="width: 600px; height: 300px"></div>
 		<!-- Script for myChart -->
 		<!-- <script>
 			var ctx = document.getElementById("myChart").getContext("2d");
