draw temperature and pressure graph

--- a/egs/voicehome/frontend/analytics.html
+++ b/egs/voicehome/frontend/analytics.html
@@ -100,7 +100,9 @@
 		>
 			<canvas id="myChart"></canvas>
 		</div>
-		<div id="div_g" style="width: 600px; height: 300px"></div>
+		<div id="graph-confainer">
+			<div id="div_g" style="width: 600px; height: 300px"></div>
+		</div>
 		<!-- Script for myChart -->
 		<!-- <script>
 			var ctx = document.getElementById("myChart").getContext("2d");
