--- a/egs/voicehome/frontend/analytics.html
+++ b/egs/voicehome/frontend/analytics.html
@@ -95,12 +95,9 @@
 		</nav>
 		<div id="filter-container"></div>
 		<div
-			id="chart-container"
+			id="graph-confainer"
 			style="position: relative; height: 40vh; width: 80vw"
-		>
-			<canvas id="myChart"></canvas>
-		</div>
-		<div id="graph-confainer"></div>
+		></div>
 		<!-- Script for myChart -->
 		<!-- <script>
 			var ctx = document.getElementById("myChart").getContext("2d");
