--- a/egs/voicehome/frontend/analytics.html
+++ b/egs/voicehome/frontend/analytics.html
@@ -94,10 +94,7 @@
 			</div>
 		</nav>
 		<div id="filter-container"></div>
-		<div
-			id="graph-confainer"
-			style="position: relative; height: 40vh; width: 80vw"
-		></div>
+		<div id="graph-confainer"></div>
 		<!-- Script for myChart -->
 		<!-- <script>
 			var ctx = document.getElementById("myChart").getContext("2d");
