--- a/egs/voicehome/frontend/analytics.html
+++ b/egs/voicehome/frontend/analytics.html
@@ -95,7 +95,7 @@
 			</div>
 		</nav>
 
-		<div id="filter-container"></div>
+		<div id="filter-container" class="m-3"></div>
 		<div id="graph-confainer"></div>
 		<!-- Script for myChart -->
 		<!-- <script>
