--- a/egs/voicehome/frontend/index.html
+++ b/egs/voicehome/frontend/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1"
+			charset="UTF-8"
+		/>
 		<title>Voice-enabled smart home modules</title>
 
 		<!-- Styles -->
@@ -14,6 +18,7 @@
 			integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
 			crossorigin="anonymous"
 		/>
+		<!-- <script src="https://use.fontawesome.com/33ca1789de.js"></script> -->
 
 		<!-- Bootstrap -->
 		<!-- CSS -->
@@ -23,7 +28,18 @@
 			integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
 			crossorigin="anonymous"
 		/>
-
+		<!-- CSS only -->
+		<!-- <link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+			crossorigin="anonymous"
+		/> -->
+		<!-- Bootstrap icons -->
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css"
+		/>
 		<!-- Bootstrap Toggle -->
 		<link
 			href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css"
@@ -32,64 +48,269 @@
 	</head>
 
 	<body onload="onBodyLoad()">
-		<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-			<a class="navbar-brand" href="/index.html">IOT</a>
-			<button
-				class="navbar-toggler"
-				type="button"
-				data-toggle="collapse"
-				data-target="#navbarNavDropdown"
-				aria-controls="navbarNavDropdown"
-				aria-expanded="false"
-				aria-label="Toggle navigation"
-			>
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNavDropdown">
-				<ul class="navbar-nav">
-					<li class="nav-item">
-						<a class="nav-link active" href="/index.html"
-							>Home
-							<!-- <span class="sr-only">(current)</span> -->
-						</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Switches</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="/analytics.html">Analytics</a>
-					</li>
-					<li class="nav-item dropdown">
-						<a
-							class="nav-link dropdown-toggle"
-							href="#"
-							id="navbarDropdownMenuLink"
-							data-toggle="dropdown"
-							aria-haspopup="true"
-							aria-expanded="false"
-						>
-							Rooms
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="#">Bedroom</a>
-							<a class="dropdown-item" href="#">Kitchen</a>
-							<a class="dropdown-item" href="#">Living room</a>
-						</div>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Modules</a>
-					</li>
-				</ul>
-			</div>
-		</nav>
+		<header>
+			<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+				<a class="navbar-brand" href="/index.html">IOT</a>
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-toggle="collapse"
+					data-target="#navbarNavDropdown"
+					aria-controls="navbarNavDropdown"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+				>
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNavDropdown">
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link active" href="/index.html"
+								>Home
+								<!-- <span class="sr-only">(current)</span> -->
+							</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/analytics.html">Analytics</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/modules.html">Modules</a>
+						</li>
+					</ul>
+				</div>
+			</nav>
+		</header>
 
-		<div id="eventLog"></div>
-		<div class="row">
-			<div id="modules" class="col-md-4 col-lg-3 d-md-block"></div>
-			<!-- <div id="modules" class="col-md-4 col-lg-3 d-none d-md-block"></div> -->
-			<div id="modules_information" class="col-md-8 col-lg-9 col-12"></div>
-			<!--<button onclick="turnModuleOnOff(true, 'sensors')">turn_on_off</button> -->
-		</div>
+		<main class="container" role="main">
+			<div class="row" id="row_1">
+				<div id="eventLogContainer" class="card border-5 col">
+					<div id="title">
+						<span class="title">
+							<i style="float: left; margin-right: 5px" class="bi bi-mic"></i>
+							Current event log</span
+						>
+					</div>
+					<div id="eventLog"></div>
+				</div>
+				<div id="light_div" class="col card border-5">
+					<span class="title">Lights status</span><br />
+					<div id="light_container" class="overflow-auto">
+						<div>
+							<img
+								style="
+									width: 20px;
+									height: 40px;
+									display: inline-block;
+									text-align: center;
+									margin-bottom: 5px;
+								"
+								src="/img/light/lightbulboff.svg"
+								alt="lightbulboff"
+							/>
+							<span> room_1 </span>
+						</div>
+						<div>
+							<img
+								style="
+									width: 20px;
+									height: 40px;
+									display: inline-block;
+									text-align: center;
+									margin-bottom: 5px;
+								"
+								src="/img/light/lightbulbon.svg"
+								alt="lightbulbon"
+							/>
+							<span>room_2</span>
+						</div>
+						<div>
+							<img
+								style="
+									width: 20px;
+									height: 40px;
+									display: inline-block;
+									text-align: center;
+									margin-bottom: 5px;
+								"
+								src="/img/light/lightbulbon.svg"
+								alt="lightbulbon"
+							/>
+							<span>kitchen</span>
+						</div>
+						<div>
+							<img
+								style="
+									width: 20px;
+									height: 40px;
+									display: inline-block;
+									text-align: center;
+									margin-bottom: 5px;
+								"
+								src="/img/light/lightbulbon.svg"
+								alt="lightbulbon"
+							/>
+							<span>room_3</span>
+						</div>
+						<div>
+							<img
+								style="
+									width: 20px;
+									height: 40px;
+									display: inline-block;
+									text-align: center;
+									margin-bottom: 5px;
+								"
+								src="/img/light/lightbulbon.svg"
+								alt="lightbulbon"
+							/>
+							<span>room_4</span>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row" id="row_2">
+				<div
+					id="time_weather"
+					style="min-width: 20em"
+					class="border-5 card col-md-3 col-lg-3 col-3 text-center"
+				>
+					<div class="time">
+						<span> 11/05/2021 </span><br />
+						<span> 12:40 </span><br />
+					</div>
+					<div class="weather">
+						<div id="today">
+							<span>Today</span><br />
+							<img
+								style="width: 3em; height: 3em"
+								src="/img/weather/sun.svg"
+								alt="sun"
+							/>
+							<span>30°C</span><br />
+							<span>32°C/20°C</span>
+							<img
+								style="width: 2em; height: 2em; margin: 0; margin-left: 25px"
+								src="/img/weather/umbrella.svg"
+								alt="umbrella"
+							/>
+							<span style="margin: 0">20%</span><br />
+						</div>
+
+						<div class="border-top border-3" id="tomorrow">
+							<span>Tomorrow</span><br />
+							<img
+								style="width: 1.7em; height: 1.7 em"
+								src="/img/weather/sun.svg"
+								alt="sun"
+							/><span>32°C/20°C</span
+							><img
+								style="
+									width: 1.3em;
+									height: 1.3em;
+									margin: 0;
+									margin-left: 25px;
+								"
+								src="/img/weather/umbrella.svg"
+								alt="umbrella"
+							/>
+							<span style="margin: 0">20%</span><br />
+						</div>
+					</div>
+				</div>
+
+				<div id="sensors_status" class="card col border-5 overflow-auto">
+					<span class="title">Sensors status</span>
+					<div id="sensors_container">
+						<div>
+							<i style="color: green" class="bi bi-check-circle-fill"></i>
+							<span>bme280_1_humidity</span>
+							<span>[2021-01-23 00:58:31]</span>
+						</div>
+						<div>
+							<i style="color: red" class="bi bi-dash-circle-fill"></i>
+							<span>ds18b20_1_temperature</span>
+							<span>[2021-01-23 00:58:31]</span>
+						</div>
+						<div>
+							<i style="color: green" class="bi bi-check-circle-fill"></i>
+							<span>bme280_1_pressure</span>
+							<span>[2021-01-23 00:58:31]</span>
+						</div>
+						<div>
+							<i style="color: green" class="bi bi-check-circle-fill"></i>
+							<span>bme280_1_temperature</span>
+							<span>[2021-01-23 00:58:31]</span>
+						</div>
+						<div>
+							<i style="color: green" class="bi bi-check-circle-fill"></i>
+							<span>bme280_1_humidity</span>
+							<span>[2021-01-23 00:58:31]</span>
+						</div>
+					</div>
+				</div>
+				<!--<button onclick="turnModuleOnOff(true, 'sensors')">turn_on_off</button> -->
+			</div>
+			<div class="row border-5 card" id="row_3">
+				<div class="col">
+					<span class="title">Currently measured values</span>
+					<div id="sensors_container">
+						<div class="sensors row">
+							<span class="sensors room">room_1</span><br />
+							<div class="measured_values_item card border-2 col-auto">
+								<span class="card-title text-center title">bme280_1</span><br />
+								<div class="card-body sensors">
+									<span>32°C</span>
+									<img
+										class="sensors"
+										src="/img/quantity/temperature.svg"
+										alt="temperature"
+									/>
+								</div>
+							</div>
+							<div class="measured_values_item card border-2 col-auto">
+								<span class="card-title text-center title">bme280_1</span><br />
+								<div class="card-body sensors">
+									<span>980hPa</span>
+									<img
+										class="sensors"
+										src="/img/quantity/pressure.svg"
+										alt="pressure"
+									/>
+								</div>
+							</div>
+							<div class="measured_values_item card border-2 col-auto">
+								<span class="card-title text-center title">tsl2591_1</span
+								><br />
+								<div class="card-body sensors">
+									<span>20lx</span>
+									<img
+										class="sensors"
+										src="/img/quantity/illuminance.svg"
+										alt="illuminance"
+									/>
+								</div>
+							</div>
+						</div>
+						<div class="sensors row">
+							<span class="sensors room">room_2</span><br />
+							<div class="measured_values_item card border-2 col-auto">
+								<span class="card-title text-center title">ds18b20_1</span
+								><br />
+								<div class="card-body sensors">
+									<span>32°C</span>
+									<img
+										class="sensors"
+										src="/img/quantity/temperature.svg"
+										alt="temperature"
+									/>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</main>
+
 		<!-- Bootstrap -->
 		<!-- jQuery and JS bundle w/ Popper.js -->
 		<script
@@ -102,6 +323,12 @@
 			integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
 			crossorigin="anonymous"
 		></script>
+		<!-- JavaScript Bundle with Popper -->
+		<!-- <script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+			crossorigin="anonymous"
+		></script> -->
 		<!-- Bootstrap Toggle -->
 		<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 		<!-- Scripts -->
@@ -109,5 +336,20 @@
 			let ws;
 		</script>
 		<script src="js/script.js" type="text/javascript"></script>
+		<footer
+			style="position: fixed; bottom: 0; right: 0"
+			class="footer text-muted"
+		>
+			<div>
+				Icons made by
+				<a href="https://www.flaticon.com/authors/good-ware" title="Good Ware"
+					>Good Ware</a
+				>
+				from
+				<a href="https://www.flaticon.com/" title="Flaticon"
+					>www.flaticon.com</a
+				>
+			</div>
+		</footer>
 	</body>
 </html>
