web - feature to turn module on or off added

--- a/egs/voicehome/frontend/index.html
+++ b/egs/voicehome/frontend/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta
-			name="viewport"
-			content="width=device-width, initial-scale=1"
-			charset="UTF-8"
-		/>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
+		<meta content="utf-8" http-equiv="encoding" />
+
 		<title>Voice-enabled smart home modules</title>
 
 		<!-- Styles -->
@@ -248,7 +247,6 @@
 						</div>
 					</div>
 				</div>
-				<!--<button onclick="turnModuleOnOff(true, 'sensors')">turn_on_off</button> -->
 			</div>
 			<div class="row border-5 card" id="row_3">
 				<div class="col">
