--- a/egs/voicehome/frontend/modules.html
+++ b/egs/voicehome/frontend/modules.html
@@ -47,8 +47,11 @@
 			>
 				<span class="navbar-toggler-icon"></span>
 			</button>
-			<div class="collapse navbar-collapse" id="navbarNavDropdown">
-				<ul class="navbar-nav">
+			<div
+				class="collapse navbar-collapse order-1 dual-collapse2"
+				id="navbarNavDropdown"
+			>
+				<ul class="navbar-nav mr-auto">
 					<li class="nav-item">
 						<a class="nav-link" href="/index.html"
 							>Home
@@ -58,8 +61,23 @@
 					<li class="nav-item">
 						<a class="nav-link" href="/analytics.html">Analytics</a>
 					</li>
-					<li class="nav-item active">
-						<a class="nav-link" href="/modules.html">Modules</a>
+					<li class="nav-item">
+						<a class="nav-link active" href="/modules.html">Modules</a>
+					</li>
+				</ul>
+			</div>
+			<div
+				class="collapse navbar-collapse order-2 dual-collapse2"
+				id="navbarNavDropdown"
+			>
+				<ul class="navbar-nav ml-auto text-right">
+					<li class="">
+						<img
+							id="controllers_status"
+							style="width: 40px; margin: 3px"
+							src=""
+							alt=""
+						/>
 					</li>
 				</ul>
 			</div>
