--- a/egs/voicehome/frontend/analytics.html
+++ b/egs/voicehome/frontend/analytics.html
@@ -57,8 +57,11 @@
 			>
 				<span class="navbar-toggler-icon"></span>
 			</button>
-			<div class="collapse navbar-collapse" id="navbarNavDropdown">
-				<ul class="navbar-nav">
+			<div
+				class="collapse navbar-collapse order-1 dual-collapse2"
+				id="navbarNavDropdown"
+			>
+				<ul class="navbar-nav mr-auto">
 					<li class="nav-item">
 						<a class="nav-link" href="/index.html"
 							>Home
@@ -70,6 +73,21 @@
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="/modules.html">Modules</a>
+					</li>
+				</ul>
+			</div>
+			<div
+				class="collapse navbar-collapse order-2 dual-collapse2"
+				id="navbarNavDropdown"
+			>
+				<ul class="navbar-nav ml-auto text-right">
+					<li class="">
+						<img
+							id="controllers_status"
+							style="width: 40px; margin: 3px"
+							src=""
+							alt=""
+						/>
 					</li>
 				</ul>
 			</div>
