web - added feature to load data without refresh

--- a/egs/voicehome/frontend/index.html
+++ b/egs/voicehome/frontend/index.html
@@ -87,7 +87,7 @@
 					<ul class="navbar-nav ml-auto text-right">
 						<li class="">
 							<img
-								id="controllers_status"
+								id="controllers_state"
 								style="width: 40px; margin: 3px"
 								src=""
 								alt=""
@@ -107,11 +107,16 @@
 							Current event log</span
 						>
 					</div>
-					<div id="eventLog"></div>
+					<div id="eventLog">
+						<div class="alert alert-info" role="alert">
+							Waiting for use of voicekit
+						</div>
+					</div>
 				</div>
 				<div id="light_div" class="col card border-5">
-					<span class="title">Lights status</span><br />
+					<span class="title">Lights state</span><br />
 					<div id="light_container" class="overflow-auto">
+						<div class="alert alert-info" role="alert">Waiting for data...</div>
 						<div>
 							<img
 								style="
@@ -194,8 +199,10 @@
 					<div id="time"></div>
 					<div class="weather">
 						<div id="today">
-							<!-- <span>Today</span><br />
-							<img
+							<span>Today</span><br />
+							<div class="alert alert-info" role="alert">Waiting for data</div>
+
+							<!-- <img
 								style="width: 3em; height: 3em"
 								src="/img/weather/sun.svg"
 								alt="sun"
@@ -211,8 +218,9 @@
 						</div>
 
 						<div class="border-top border-3" id="tomorrow">
-							<!-- <span>Tomorrow</span><br />
-							<img
+							<span>Tomorrow</span><br />
+							<div class="alert alert-info" role="alert">Waiting for data</div>
+							<!-- <img
 								style="width: 1.7em; height: 1.7 em"
 								src="/img/weather/sun.svg"
 								alt="sun"
@@ -227,21 +235,24 @@
 								src="/img/weather/umbrella.svg"
 								alt="umbrella"
 							/>
-							<span style="margin: 0">20%</span><br /> -->
+							<span style="margin: 0">20%</span><br />  -->
 						</div>
 					</div>
 				</div>
 
-				<div id="sensors_status" class="card col border-5 overflow-auto">
-					<span class="title">Sensors status</span>
-					<div id="sensors_container"></div>
+				<div id="sensors_state" class="card col border-5 overflow-auto">
+					<span class="title">Sensors state</span>
+					<div id="sensors_container">
+						<div class="alert alert-info" role="alert">Waiting for data...</div>
+					</div>
 				</div>
 			</div>
 			<div class="row border-5 card" id="row_3">
 				<div class="col">
 					<span class="title">Currently measured values</span>
 					<div id="measured_value_container">
-						<div class="sensors row measured_value">
+						<div class="alert alert-info" role="alert">Waiting for data...</div>
+						<!-- <div class="sensors row measured_value">
 							<span class="sensors room measured_value">room_1</span><br />
 							<div class="measured_values_item card border-2 col-auto">
 								<span class="card-title text-center title">bme280_1</span><br />
@@ -292,7 +303,7 @@
 									/>
 								</div>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
